# PropShield

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
propshield/: __init__.py  __main__.py  cli.py  config.py  engine.py  factory.py  indicators.py  models.py  risk.py  terminal.py
propshield/broker/: __init__.py  base.py  paper.py  tradelocker_client.py
propshield/strategy/: __init__.py  base.py  scout.py
tests/: test_engine.py  test_indicators.py  test_paper_broker.py  test_risk.py  test_scout.py
